# ascovers

./: .gitignore  README.md  pyproject.toml
docs/: as_covers.md  index.md  superelliptic.md
src/ascovers/: __init__.py  linear_algebra.py
src/ascovers/as_covers/: __init__.py  auxiliary.py  cech.py  cover.py  dual.py  form.py  function.py  group.py  holomorphic.py  holomorphic_combinations.py  matrices.py  polyforms.py  reduction.py  template.py  transform.py
src/ascovers/superelliptic/: __init__.py  cech.py  curve.py  decomposition.py  exceptions.py  form.py  function.py  utils.py
test/: test_as_covers.py  test_superelliptic_curve.py
