[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascovers"
version = "0.1.0"
description = "SageMath tools for superelliptic curves and their p-group covers in characteristic p."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "ascovers contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[tool.setuptools.packages.find]
where = ["src"]
